<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="22.6dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="18dp"
                android:layout_marginStart="18.5dp"
                android:layout_marginTop="10dp" >

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    map:cameraTargetLat="21.0000"
                    map:cameraTargetLng="78.0000"
                    map:cameraZoom="2" >
                </com.google.android.gms.maps.MapView>

                <TextView
                    android:id="@+id/TxtViewQuestionMark"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="#99000000"
                    android:gravity="center"
                    android:text="@string/questionMark"
                    android:textSize="100sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/bankFormLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginEnd="22.6dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginStart="18.5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/location"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/location_edittext"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_text_edit"
                        android:clickable="false"
                        android:editable="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:singleLine="true" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:gravity="center_vertical" />

                    <Button
                        android:id="@+id/markLocationButton"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.60"
                        android:background="@drawable/button_location_selection"
                        android:text="@string/mark_location"
                        android:textColor="#ffffff" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:gravity="center_vertical" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>